Implemented shitty command system even with CommandAPI. Admin commands still not added and need to test sharing more with other clients connected